// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`station-properties-panel matches snapshot 1`] = `
<div>
  <div
    class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
  >
    <div
      class="bp5-non-ideal-state-text"
    >
      <h4
        class="bp5-heading"
      >
        Station Properties
      </h4>
      <div>
        Loading display
      </div>
    </div>
    <div
      aria-label="loading"
      aria-valuemax="100"
      aria-valuemin="0"
      class="bp5-spinner bp5-intent-primary"
      role="progressbar"
    >
      <div
        class="bp5-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp5-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp5-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot 1 station 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
    tabindex="-1"
  >
     
    <div
      class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
    >
      <div
        class="bp5-non-ideal-state-visual"
        style="font-size: 48px; line-height: 48px;"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-select"
          tabindex="-1"
        >
          <svg
            data-icon="select"
            height="48"
            role="img"
            viewBox="0 0 20 20"
            width="48"
          >
            <path
              d="M19.71 18.29l-4.25-4.25L20 12.91 9.93 9.33c.04-.1.07-.21.07-.33V3c0-.55-.45-1-1-1H4V1c0-.55-.45-1-1-1S2 .45 2 1v1H1c-.55 0-1 .45-1 1s.45 1 1 1h1v5c0 .55.45 1 1 1h6c.12 0 .23-.03.34-.07L12.91 20l1.14-4.54 4.25 4.25c.17.18.42.29.7.29a1.003 1.003 0 00.71-1.71zM8 8H4V4h4v4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp5-non-ideal-state-text"
      >
        <h4
          class="bp5-heading"
        >
          No Station Selected
        </h4>
        <div>
          Select a station in the Waveform, Map Display, or the menu below to view station properties
        </div>
      </div>
      <label
        class="help-text__hover-container gms-group__label form-label"
        style="--help-text-background: color-mix(in srgb, var(--gms-main) 5%, var(--gms-dialog-background));"
      >
        <span>
          Input Stations
           
        </span>
      </label>
      <div
        class="gms-form-group__content form-value"
      >
        <div
          aria-autocomplete="list"
          aria-controls="listbox-6"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="bp5-popover-target"
          role="combobox"
        >
          <div
            class="bp5-input bp5-tag-input bp5-disabled bp5-multi-select"
          >
            <div
              class="bp5-tag-input-values"
            >
              <input
                class="bp5-input-ghost bp5-multi-select-tag-input-input"
                disabled=""
                placeholder="Select a station"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot 2`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
    tabindex="-1"
  >
     
    <div
      class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
    >
      <div
        class="bp5-non-ideal-state-visual"
        style="font-size: 48px; line-height: 48px;"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-select"
          data-icon="select"
          tabindex="-1"
        />
      </div>
      <div
        class="bp5-non-ideal-state-text"
      >
        <h4
          class="bp5-heading"
        >
          No Station Selected
        </h4>
        <div>
          Select a station in the Waveform, Map Display, or the menu below to view station properties
        </div>
      </div>
      <label
        class="help-text__hover-container gms-group__label form-label"
        style="--help-text-background: color-mix(in srgb, var(--gms-main) 5%, var(--gms-dialog-background));"
      >
        <span>
          Input Stations
           
        </span>
      </label>
      <div
        class="gms-form-group__content form-value"
      >
        <div
          aria-autocomplete="list"
          aria-controls="listbox-1"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="bp5-popover-target"
          role="combobox"
        >
          <div
            class="bp5-input bp5-tag-input bp5-disabled bp5-multi-select"
          >
            <div
              class="bp5-tag-input-values"
            >
              <input
                class="bp5-input-ghost bp5-multi-select-tag-input-input"
                disabled=""
                placeholder="Select a station"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot multiple stations 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
    tabindex="-1"
  >
     
    <div
      class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
    >
      <div
        class="bp5-non-ideal-state-visual"
        style="font-size: 48px; line-height: 48px;"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-select"
          tabindex="-1"
        >
          <svg
            data-icon="select"
            height="48"
            role="img"
            viewBox="0 0 20 20"
            width="48"
          >
            <path
              d="M19.71 18.29l-4.25-4.25L20 12.91 9.93 9.33c.04-.1.07-.21.07-.33V3c0-.55-.45-1-1-1H4V1c0-.55-.45-1-1-1S2 .45 2 1v1H1c-.55 0-1 .45-1 1s.45 1 1 1h1v5c0 .55.45 1 1 1h6c.12 0 .23-.03.34-.07L12.91 20l1.14-4.54 4.25 4.25c.17.18.42.29.7.29a1.003 1.003 0 00.71-1.71zM8 8H4V4h4v4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp5-non-ideal-state-text"
      >
        <h4
          class="bp5-heading"
        >
          No Station Selected
        </h4>
        <div>
          Select a station in the Waveform, Map Display, or the menu below to view station properties
        </div>
      </div>
      <label
        class="help-text__hover-container gms-group__label form-label"
        style="--help-text-background: color-mix(in srgb, var(--gms-main) 5%, var(--gms-dialog-background));"
      >
        <span>
          Input Stations
           
        </span>
      </label>
      <div
        class="gms-form-group__content form-value"
      >
        <div
          aria-autocomplete="list"
          aria-controls="listbox-10"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="bp5-popover-target"
          role="combobox"
        >
          <div
            class="bp5-input bp5-tag-input bp5-disabled bp5-multi-select"
          >
            <div
              class="bp5-tag-input-values"
            >
              <input
                class="bp5-input-ghost bp5-multi-select-tag-input-input"
                disabled=""
                placeholder="Select a station"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`station-properties-panel matches snapshot no stations 1`] = `
<div>
  <div
    class="base-display station-properties-display-window"
    data-cy="station-properties-display-window"
    tabindex="-1"
  >
     
    <div
      class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
    >
      <div
        class="bp5-non-ideal-state-visual"
        style="font-size: 48px; line-height: 48px;"
      >
        <span
          aria-hidden="true"
          class="bp5-icon bp5-icon-select"
          tabindex="-1"
        >
          <svg
            data-icon="select"
            height="48"
            role="img"
            viewBox="0 0 20 20"
            width="48"
          >
            <path
              d="M19.71 18.29l-4.25-4.25L20 12.91 9.93 9.33c.04-.1.07-.21.07-.33V3c0-.55-.45-1-1-1H4V1c0-.55-.45-1-1-1S2 .45 2 1v1H1c-.55 0-1 .45-1 1s.45 1 1 1h1v5c0 .55.45 1 1 1h6c.12 0 .23-.03.34-.07L12.91 20l1.14-4.54 4.25 4.25c.17.18.42.29.7.29a1.003 1.003 0 00.71-1.71zM8 8H4V4h4v4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        class="bp5-non-ideal-state-text"
      >
        <h4
          class="bp5-heading"
        >
          No Station Selected
        </h4>
        <div>
          Select a station in the Waveform, Map Display, or the menu below to view station properties
        </div>
      </div>
      <label
        class="help-text__hover-container gms-group__label form-label"
        style="--help-text-background: color-mix(in srgb, var(--gms-main) 5%, var(--gms-dialog-background));"
      >
        <span>
          Input Stations
           
        </span>
      </label>
      <div
        class="gms-form-group__content form-value"
      >
        <div
          aria-autocomplete="list"
          aria-controls="listbox-12"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="bp5-popover-target"
          role="combobox"
        >
          <div
            class="bp5-input bp5-tag-input bp5-disabled bp5-multi-select"
          >
            <div
              class="bp5-tag-input-values"
            >
              <input
                class="bp5-input-ghost bp5-multi-select-tag-input-input"
                disabled=""
                placeholder="Select a station"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
